--- a/views/list.view.html
+++ b/views/list.view.html
@@ -1,9 +1,9 @@
 <div>
-    <div ng-repeat="product in products | filter: searchText | orderBy: sortColumn:reverseSort | limitTo: rowLimit.value">
+    <div ng-repeat="product in products | filter: searchText | orderBy: sortColumn | limitTo: rowLimit">
             <div class="card mb-3">
                     <div class="row no-gutters">
                       <div class="col-md-4">
-                        <img src="{{product.image}}" class="card-img img-size-small">
+                        <img ng-src="{{product.image}}" class="card-img img-size-small">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -11,7 +11,7 @@
                           <div class="row">
                                 <p class="card-text card-text-color col-md-6">{{product.price | currency}}</p>
                                 <p class="card-text card-text-size col-md-6">
-                                    <div class="stars-outer" ng-controller="ratingController">
+                                    <div class="stars-outer">
                                         <div class="stars-inner" ng-style="{'width': rating(product.rating)}"></div>
                                     </div>
                                 </p>
